add guessGreedy algo

--- a/Repository/notebook.ipynb
+++ b/Repository/notebook.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import pickle\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from networkx.algorithms import isomorphism\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.nodes[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,30 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Java\n",
-      "Not Java\n",
-      "Not Java\n"
-     ]
-    }
-   ],
-   "source": [
-    "for u in project.nodes:\n",
-    "    if u == 'java':\n",
-    "        print(\"Java\")\n",
-    "    else:\n",
-    "        print(\"Not Java\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,15 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "java_network.nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,29 +132,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpp_best = greedyCover(cpp_network, Task_Cpp_skills)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "java_best = greedyCover(java_network, Task_Java_skills)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "web_best = greedyCover(web_network, Task_Web_skills)"
+    "cpp_best = greedyCover(cpp_network, Task_Cpp_skills)\n",
+    "java_best = greedyCover(java_network, Task_Java_skills)\n",
+    "web_best = greedyCover(web_network, Task_Web_skills)\n",
+    "\n",
+    "best = []\n",
+    "best.extend(cpp_best)\n",
+    "best.extend(java_best)\n",
+    "best.extend(web_best)\n",
+    "\n",
+    "best_in_network = data.subgraph(best)\n",
+    "\n",
+    "java_best_network = data.subgraph(java_best)\n",
+    "cpp_best_network = data.subgraph(cpp_best)\n",
+    "web_best_network = data.subgraph(web_best)\n",
+    "\n",
+    "new_network = best_in_network.copy()\n",
+    "\n",
+    "for u in java_best_network.nodes:\n",
+    "    for v in cpp_best_network.nodes:\n",
+    "        new_network.remove_edge(u, v)"
    ]
   },
   {
@@ -184,243 +164,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best = []\n",
-    "best.extend(cpp_best)\n",
-    "best.extend(java_best)\n",
-    "best.extend(web_best)\n",
-    "best"
+    "def isIsomorphic(G, H):\n",
+    "    GM = isomorphism.GraphMatcher(G, H)\n",
+    "    if GM.is_isomorphic():\n",
+    "        # Extract the nodes of the subgraph from G\n",
+    "        subgraph_nodes = list(GM.mapping.keys())\n",
+    "        subgraph = G.subgraph(subgraph_nodes)\n",
+    "        \n",
+    "        print(\"Subgraph with similar structure found:\")\n",
+    "        # print(subgraph.edges())\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(\"No subgraph with a similar structure found.\")\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_in_network = data.subgraph(best)"
+    "def getConnectedComponents(G):\n",
+    "\n",
+    "    # Find the connected components in the graph\n",
+    "    connected_components = list(nx.connected_components(G))\n",
+    "\n",
+    "    # Find the largest connected component\n",
+    "    largest_component = max(connected_components, key=len)\n",
+    "\n",
+    "    # Create a subgraph containing only the nodes in the largest connected component\n",
+    "    subgraph = G.subgraph(largest_component)\n",
+    "\n",
+    "    return subgraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "java_best_network = data.subgraph(java_best)\n",
-    "cpp_best_network = data.subgraph(cpp_best)\n",
-    "web_best_network = data.subgraph(web_best)"
+    "def getSubgraph(G, H, w):\n",
+    "    list_of_nodes = list(G.nodes)\n",
+    "    random.shuffle(list_of_nodes)\n",
+    "    print(f\"Shuffled Nodes: {list_of_nodes}\")\n",
+    "    selected_nodes = []\n",
+    "    labels = []\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    try:\n",
+    "        while i < len(H.nodes) and j < len(list_of_nodes):\n",
+    "            if (G.nodes[list_of_nodes[j]]['label'] not in labels) and (G.nodes[list_of_nodes[j]] not in selected_nodes):\n",
+    "                selected_nodes.append(list_of_nodes[j])\n",
+    "                labels.append(G.nodes[list_of_nodes[j]]['label'])\n",
+    "                print(f\"Added Node {i+1}\")\n",
+    "                i += 1\n",
+    "            j += 1\n",
+    "    except: \n",
+    "        print(\"Error Getting Isomorphic Subgraph\")\n",
+    "\n",
+    "    subGraph = G.subgraph(selected_nodes)\n",
+    "    if isIsomorphic(subGraph, H):\n",
+    "        print(subGraph.nodes)\n",
+    "        return subGraph\n",
+    "    else:\n",
+    "        while w > 0:\n",
+    "            getSubgraph(G, H, w)\n",
+    "            w -= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'location': 'Venezuela',\n",
-       " 'skills': ['Metatrader',\n",
-       "  'C++ Programming',\n",
-       "  'C Programming',\n",
-       "  'C# Programming',\n",
-       "  'Visual Basic'],\n",
-       " 'label': 'cpp'}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_in_network.nodes[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def distance_btn_nodes(G, source_node, target_node):\n",
-    "    distance = nx.shortest_path_length(G, source=source_node, target=target_node, weight=\"weight\")\n",
-    "    return distance\n",
-    "\n",
-    "def distance_btn_node_and_team(G, source_node, target_team):\n",
-    "    distance_to_team = 0\n",
-    "    for node in target_team.nodes:\n",
-    "        distance_to_team = distance_to_team + distance_btn_nodes(G, source_node, node)\n",
-    "    return distance_to_team\n",
-    "\n",
-    "def coordinator(G, source_team, target_team):\n",
-    "    coordinator = None\n",
-    "    min_distance = float('Inf') # Set the minimum distance to a very large number\n",
-    "    for node in source_team:\n",
-    "        node_distance = distance_btn_node_and_team(G, node, target_team)\n",
-    "        if node_distance < min_distance:\n",
-    "            min_distance = node_distance\n",
-    "            coordinator = node\n",
-    "    print(f\"Coordinator Distance = {min_distance}\")\n",
-    "    return coordinator"
+    "try_network = new_network.subgraph([1, 905, 1565])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_coordinators(G, P):\n",
-    "    coordinators = set()\n",
-    "    \n",
-    "    for (u, v) in P.edges:\n",
-    "        new_coordinator = None\n",
-    "        if u == 'java':\n",
-    "            source_team = java_best_network\n",
-    "        elif u == 'cpp':\n",
-    "            source_team = cpp_best_network\n",
-    "        else:\n",
-    "            source_team = web_best\n",
-    "\n",
-    "        if v == 'java':\n",
-    "            target_team = java_best_network\n",
-    "        elif v == 'cpp':\n",
-    "            target_team = cpp_best_network\n",
-    "        else:\n",
-    "            target_team = web_best_network\n",
-    "\n",
-    "        new_coordinator = coordinator(G, source_team, target_team)\n",
-    "        coordinators.add(new_coordinator)\n",
-    "    return coordinators"
+    "getSubgraph(try_network, project, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordinator Distance = 0.8023172670460694\n",
-      "Coordinator Distance = 1.0905277443752528\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{38, 662}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "find_coordinators(data, project)"
+    "def guessGreedy(G, H, w):\n",
+    "    # test_subgraph = \n",
+    "    while G.number_of_edges() >= H.number_of_edges():\n",
+    "        network = getConnectedComponents(G)\n",
+    "        print(f\"Selected network {network}\")\n",
+    "        subgraph = getSubgraph(network, H, w)\n",
+    "        print(f\"subgraph found {subgraph.nodes}\")\n",
+    "        max_weight_edge = max(subgraph.edges(data=True), key=lambda edge: edge[2]['weight'])\n",
+    "        k = max_weight_edge[0]\n",
+    "        l = max_weight_edge[1]\n",
+    "        # print(\"I got this far!\")\n",
+    "        for (u, v) in G.edges():\n",
+    "            # print(\"\\nI mean this far\")\n",
+    "            if (G.nodes[u]['label'] == G.nodes[l]['label']) and (G.nodes[v]['label'] == G.nodes[k]['label']) and G[u][v]['weight'] > max_weight_edge[2]['weight']:\n",
+    "                G.remove_edge(u, v)\n",
+    "                print(\"Edge Removed\")\n",
+    "        print(f\"Nodes remaining in G: {getConnectedComponents(G)}\")\n",
+    "    return getConnectedComponents(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'location': 'Pakistan',\n",
-       " 'skills': ['Software Architecture',\n",
-       "  'PHP',\n",
-       "  'C++ Programming',\n",
-       "  'MySQL',\n",
-       "  'C Programming'],\n",
-       " 'label': 'cpp'}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.nodes[38]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'location': 'India',\n",
-       " 'skills': ['HTML', 'PHP', 'Sharepoint', 'Website Design', 'eCommerce'],\n",
-       " 'label': 'java'}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.nodes[662]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordinator Distance = 1.8489753253435084\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1433"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_graph = nx.compose(cpp_best_network, java_best_network)\n",
-    "coordinator(data, web_best_network, merged_graph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordinator Distance = 0.8977901659985577\n",
-      "Coordinator from Web to Cpp team is : 1433\n",
-      "Coordinator Distance = 0.9511851593449507\n",
-      "\n",
-      "Coordinator from Web to Cpp team is : 1433\n"
-     ]
-    }
-   ],
-   "source": [
-    "web_to_cpp_coordinator = coordinator(data, web_best_network, cpp_best_network)\n",
-    "print(f\"Coordinator from Web to Cpp team is : {web_to_cpp_coordinator}\")\n",
-    "web_to_java_coordinator = coordinator(data, web_best_network, java_best_network)\n",
-    "print(f\"\\nCoordinator from Web to Cpp team is : {web_to_java_coordinator}\")"
+    "guessGreedy(new_network, project, 3)"
    ]
   }
  ],
